--- a/Journal/journal.css
+++ b/Journal/journal.css
@@ -6,9 +6,25 @@
 
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: medium;
+}
+
+h1, h2{
+    color: #cc6600;
 }
 
 h1{
     font-family: "Montserrat";
-    font-weight: bolder;
+    font-size: 220%;
+    text-decoration: underline overline;
+}
+
+h2{
+    font-size: 130%;
+    font-weight: normal;
+    border-bottom: thin dotted #888888;
+}
+
+blockquote{
+    font-style: italic;
 }
