--- a/lounge/lounge.css
+++ b/lounge/lounge.css
@@ -1,27 +1,93 @@
 body {
- font-family: sans-serif;
+ font: small/1.6em Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h1, h2 {
- color: pink;
+ color: #007e7e;
 }
 
 h1 {
- border-bottom: 2px solid gray;
+ font-size: 150%;
 }
 
-p {
- color: maroon;
+h2{
+ font-size: 130%;
 }
 
-.blueberry {     
- color: purple;
+
+p{
+ font-size: 107%;
+}
+#guarantee{
+    padding: 25px;
+    padding-left: 80px;
+    margin: 30px;
+    margin-right: 250px;
+    
+    font: italic 1.9em Georgia, "Times New Roman", Times, serif;
+    color: #444444;
+    
+    background: url(images/background.gif) no-repeat top left #97d6d6;
+    border: dotted 4px white;
+    border-top-left-radius: 2em;
+    border-bottom-right-radius: 2em;
 }
 
-.greentea {     
- color: green;
+#elixirs{
+    border: solid 2px #007e7e;
+    width: 222px;
+
+    padding: 0px 20px 20px 20px;
+    margin: 0px 0px 0px 20px;
+
+    text-align: center;
+
+    line-height: 1.1;
+    background: url(Images/cocktail.gif) repeat-x;
+
+    float: right;
 }
 
-.raspberry {     
- color: blue;
+#elixirs h2{
+    color: black;
+}
+
+#elixirs h3{
+    color: red;
+}
+
+#elixirs a:link{
+    color: #007e7e;
+}
+
+#elixirs a:visited{
+    color: #333333;
+}
+
+#elixirs a:hover{
+    background: rgb(255, 0, 191);
+    color: #0d5353;
+}
+
+.cd{
+    font-style: italic;
+}
+
+.artist{
+    font-weight: bold;
+}
+
+#footer{
+    font-size: 100%;
+    text-align: center;
+    line-height: normal;
+    margin-top: 30px;
+}
+
+a:link{
+    color: #007e7e;
+}
+
+a:visited{
+    color: #333333;
 }
