--- a/Starbuzz/tableContainer/starbuzz.css
+++ b/Starbuzz/tableContainer/starbuzz.css
@@ -5,13 +5,14 @@ body {
   margin:           0px;
 }
 
-#header {
+
+header.top {
   background-color: #675c47;
   margin:           10 px 10 px 0 px 10px;
   height:           108px;
 }
 
-#headerSlogan{
+header.top #headerSlogan{
   float: right;
 }
 
@@ -20,6 +21,7 @@ body {
   top: 30px;
   left: 46%;
 }
+
 
 #tableContainer{
   display: table;
@@ -30,7 +32,16 @@ body {
   display: table-row;
 }
 
-#main {
+#drinks{
+  display: table-cell;
+  background: #efe5d0 url(images/background.gif);
+  font-size: 105%;
+  padding: 15px;
+  vertical-align: top;
+  width: 200px;
+}
+
+#main, #blog {
   display: table-cell;
   background:       #efe5d0 url(../images/background.gif) top left;
   font-size:        105%;
@@ -38,7 +49,7 @@ body {
   vertical-align: top;
 }
 
-#sidebar {
+aside {
   display: table-cell;
   background:       #efe5d0 url(../images/background.gif) bottom right;
   font-size:        105%;
@@ -46,7 +57,7 @@ body {
   vertical-align: top;
 }
 
-#footer {
+footer {
   background-color: #675c47;
   color:            #efe5d0;
   text-align:       center;
@@ -62,8 +73,8 @@ h1 {
 
 #coupon{
   position: fixed;
-  top: 350px;
-  left: -90px;
+  top: 570px;
+  right: -70px;
 }
 
 #coupon a, img{
@@ -86,4 +97,30 @@ a:visited {
   color:            #675c47;
   text-decoration:  none;
   border-bottom:    thin dotted #675c47;
+}
+
+nav{
+  background-color: #efe5d0;
+  margin: 10PX 10PX 0PX 10PX;
+}
+
+nav ul{
+  margin: 0;
+  list-style-type: none;
+  padding: 5px 0px;
+}
+
+nav ul li{
+  display: inline;
+  padding: 5px 10 px;
+}
+
+nav ul li a:link, nav ul li a:visited{
+  color: #954b4b;
+  border-bottom: none;
+  font-weight: bold;
+}
+
+nav ul li.selected {
+  background-color: #b5a789;
 }
