--- a/Starbuzz/tableContainer/starbuzz.css
+++ b/Starbuzz/tableContainer/starbuzz.css
@@ -1,7 +1,7 @@
 body { 
   background-color: #b5a789;
   font-family:      Georgia, "Times New Roman", Times, serif;
-  font-size:        medium;
+  font-size:        large;
   margin:           0px;
 }
 
@@ -22,6 +22,31 @@ header.top #headerSlogan{
   left: 46%;
 }
 
+nav{
+  background-color: #efe5d0;
+  margin: 10PX 10PX 0PX 10PX;
+}
+
+nav ul{
+  margin: 0;
+  list-style-type: none;
+  padding: 5px 0px;
+}
+
+nav ul li{
+  display: inline;
+  padding: 5px 10 px;
+}
+
+nav ul li a:link, nav ul li a:visited{
+  color: #954b4b;
+  border-bottom: none;
+  font-weight: bold;
+}
+
+nav ul li.selected {
+  background-color: #b5a789;
+}
 
 #tableContainer{
   display: table;
@@ -97,30 +122,4 @@ a:visited {
   color:            #675c47;
   text-decoration:  none;
   border-bottom:    thin dotted #675c47;
-}
-
-nav{
-  background-color: #efe5d0;
-  margin: 10PX 10PX 0PX 10PX;
-}
-
-nav ul{
-  margin: 0;
-  list-style-type: none;
-  padding: 5px 0px;
-}
-
-nav ul li{
-  display: inline;
-  padding: 5px 10 px;
-}
-
-nav ul li a:link, nav ul li a:visited{
-  color: #954b4b;
-  border-bottom: none;
-  font-weight: bold;
-}
-
-nav ul li.selected {
-  background-color: #b5a789;
 }
